[skip ci] Improve GroupCommitter3